RESOLVED FIXED198180
Fix a few missing header inclusions often masked by by unified sources
https://bugs.webkit.org/show_bug.cgi?id=198180
Summary Fix a few missing header inclusions often masked by by unified sources
Adrian Perez
Reported 2019-05-23 06:48:37 PDT
The following are build errors caused by missing includes which would have been caught much earlier if unified sources weren't used: ../Source/JavaScriptCore/wasm/WasmBinding.cpp:48:22: error: use of undeclared identifier 'wasmCallingConventionAir' GPRReg scratch = wasmCallingConventionAir().prologueScratch(0); ^ ../Source/JavaScriptCore/assembler/PerfLog.cpp:147:32: error: implicit instantiation of undefined template 'std::__1::array<char, 1024>' std::array<char, 1024> filename; ^ ../Source/WebCore/html/FeaturePolicy.cpp:53:58: error: use of undeclared identifier 'isHTMLSpace' item = item.stripLeadingAndTrailingMatchedCharacters(isHTMLSpace<UChar>); ^ ../Source/WebCore/platform/text/TextCodec.cpp:43:16: error: use of undeclared identifier 'snprintf'; did you mean 'vswprintf'? return snprintf(replacement.data(), sizeof(UnencodableReplacementArray), "&#%u;", codePoint); ^~~~~~~~ vswprintf
Attachments
Patch (3.70 KB, patch)
2019-05-23 07:34 PDT, Adrian Perez
no flags
Adrian Perez
Comment 1 2019-05-23 07:34:43 PDT
WebKit Commit Bot
Comment 2 2019-05-23 08:47:16 PDT
Comment on attachment 370505 [details] Patch Clearing flags on attachment: 370505 Committed r245681: <https://trac.webkit.org/changeset/245681>
WebKit Commit Bot
Comment 3 2019-05-23 08:47:18 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-05-23 08:48:18 PDT
Khem Raj
Comment 5 2021-04-04 13:36:57 PDT
*** Bug 197085 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.