Source/JavaScriptCore/wasm/WasmBinding.cpp
@@ -31,6 +31,7 @@
 #include "CCallHelpers.h"
 #include "JSCInlines.h"
 #include "LinkBuffer.h"
+#include "WasmCallingConvention.h"
 #include "WasmInstance.h"
 
 namespace JSC { namespace Wasm {
